--- a/my webby - Copy/Cproject.css
+++ b/my webby - Copy/Cproject.css
@@ -48,6 +48,7 @@
     padding-top: 50%;  /* 1:2 aspect ratio */
 }
 
+
 .carousel.hidden {
   display: none;
 }
@@ -109,6 +110,8 @@
 
 
 }
+
+
   
   
   /*project primary,sec NAV  */
@@ -213,12 +216,17 @@ padding-top: 2%;
   
   
   /* project text */
-  .projtext{
-  /*  font-size: x-large;
-  color: #000000;  Set the desired text color */
-  display: flex;
-  flex-direction: column;
-  /* flex-wrap: wrap; */
-  margin-left: 1%;
-  margin-right: 1%;
+
+
+  .projtext {
+    max-width: 90%; /* or whatever max width you prefer */
+    margin-left: auto;  /* These two margin properties will center your container */
+    margin-right: auto;
+    padding: 0 60px; /* Add padding to ensure text doesn't go under arrows */
+    /* rest of your styles */
+  }
+
+  h3 {
+
+    padding-top: 20px;
   }
