--- a/my webby - Copy/Cstyles.css
+++ b/my webby - Copy/Cstyles.css
@@ -65,7 +65,7 @@ nav ul li a:hover {
 .container {
   max-width: 100%;
   padding: 0 20px;
-  color: #abedff;
+  color: rgb(255, 255, 255)
   /* MAIN HEADING COLOR */
 }
 
@@ -73,9 +73,18 @@ nav ul li a:hover {
 body {
   position: relative;
   
-  background: radial-gradient(#200134, #0f0049);
-  /*BACK COLOR MAIN*/
+  background: #d2aa72; /*d2aa72*/
+  
+  /*MAIN BACKGROUND COL*/
  
+}
+
+.content p {
+  font-size: 1em;
+  /*color: #777;*/
+  color: #ffffff;
+  /* MAIN PARAGRAPH COLOR */
+  margin-bottom: 30px;
 }
 
 
@@ -90,13 +99,7 @@ body {
   margin-bottom: 20px;
 }
 
-.content p {
-  font-size: 1em;
-  /*color: #777;*/
-  color: #ffffff;
-  /* MAIN PARAGRAPH COLOR */
-  margin-bottom: 30px;
-}
+
 
 /*footer {
   background-color: rgba(31, 36, 44, 1);
@@ -115,3 +118,63 @@ footer p {
 }
 
 */
+
+
+/* Hamburger Menu Styling */
+.hamburger-menu {
+  display: none;
+  cursor: pointer;
+  /* Additional styling for bars */
+}
+
+.hamburger-menu .bar {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  margin: 5px 0;
+  transition: 0.4s;
+}
+
+/* Hide regular navigation on small screens */
+@media (max-width: 800px) {
+  .hamburger-menu {
+      display: block;
+      position: absolute;
+      top: 5px; /* Adjust as necessary */
+      right: 20px; /* Adjust as necessary */
+      z-index: 20; /* Above other content */
+      padding-right: 40px;
+  }
+  
+  nav ul {
+      display: none; /* Hidden by default */
+      flex-direction: column; /* Stack links vertically */
+      align-items: center; /* Center align the links */
+      width: 100%; /* Full width */
+      position: fixed; /* Fixed position on the top */
+      top: 60px; /* Below the hamburger menu */
+      left: 0;
+      right: 0;
+      background-color: rgba(20, 23, 28, 0.95); /* Semi-transparent background */
+      margin: 0;
+      
+      padding-top: 10px; /* Space at the top */
+      padding-bottom: 20px; /* Space at the bottom */
+  }
+
+  nav ul li {
+      padding: 10px 0; /* Add padding to each link */
+  }
+
+  nav ul li a {
+      display: block; /* Make the link fill the container */
+      font-size: 1.2em; /* Increase font size for touch accessibility */
+  }
+  
+  .show {
+      display: flex; /* Show the menu */
+      flex-direction: column;
+      align-items: center;
+  }
+}
+
