--- a/my webby - Copy/Cachievements.css
+++ b/my webby - Copy/Cachievements.css
@@ -18,7 +18,8 @@
   color: #ffffff;
   font-size: 16px;
   position: relative;
-  z-index: 32030;
+  z-index: -1;
+  margin-top: 20px;
   padding: 10px; /* Add some padding around the text */
   /* Add any other styles you want, like background color, margins, etc. */
 }
@@ -33,8 +34,10 @@
 .carousel-inner .carousel-item {
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 10px); /* This height needs to be adjusted based on your navbar and any other fixed elements */
+  min-height: calc(100vh - 10px); /* Use min-height instead of height */
+  overflow-y: auto; /* Allows scrolling if content overflows */
 }
+
 
 
 
@@ -52,6 +55,13 @@
 
 /* Responsive adjustments */
 @media (max-width: 967px) {
+
+  .carousel-item {
+ 
+    padding: 20px 30px; 
+  }
+
+
   #achievementCarousel .carousel-caption {
     max-width: 1%;
     margin-top: 5%;
@@ -59,17 +69,49 @@
     .carousel-item {
       padding: 0% 0%;
     }
-    body{
-    overflow-y: scroll;
-    overflow-x: scroll;
-    font-size: xx-small;
-    }
+
   }
 
   #achievementCarousel .carousel-control-prev,
   #achievementCarousel .carousel-control-next {
-    width: 10%;
+    /*width: 10%;*/
   }
+
+
+  .carousel-item.active {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
+  .carousel-item p {
+    font-size: smaller; /* Adjust this to decrease font size as needed */
+  }
+  
+  /* Fix arrows to the center of the screen */
+  .carousel-control-prev,
+  .carousel-control-next {
+    position: fixed; /* Fix position relative to the viewport */
+    top: 50%; /* Center vertically */
+    transform: translateY(-50%);
+    z-index: 2; /* Ensure it's above other content */
+  }
+  
+  /* Add a top margin or padding to the static-text class to prevent it from going under the nav bar */
+  .static-text {
+
+    font-size: 16px;
+    position: relative;
+    z-index: -1;
+    padding: 10px;
+    margin-top: 30px; /* Adjust this value to the height of your nav bar */
+  }
+  
+  /* Responsive adjustments for arrows */
+
+
+  
 }
 
 
