--- a/my webby - Copy/Cproject.css
+++ b/my webby - Copy/Cproject.css
@@ -1,34 +1,36 @@
-
 /*projects start */
 
 
 /*download buttons*/
 .proj1links {
-    background-color: rgba(20, 23, 28, 1);
-    color: #ffffff;
-    padding: 0.5% 1%;
+  background-color: rgba(20, 23, 28, 1);
+  color: #ffffff;
+  padding: 0.5% 1%;
   display: inline-flex;
   margin-left: 0.5%;
   margin-right: 0.5%;
-    text-decoration: none;
-    border-radius: 5px;
-    max-width: max-content;
-    justify-content: center; /* Add this line to center the button contents */
-  }
-  .containerlink{
-  
-    display:flex;
-    justify-content: center; 
-  }
-  
-  .proj1links:hover {
-    background-color: #ffffff;
-    color: #000000;
-    transform: scale(1.1);
-  }
-  
-  #carouselProject1 {
-    padding-bottom: 2%;
+  text-decoration: none;
+  border-radius: 5px;
+  max-width: max-content;
+  justify-content: center;
+  /* Add this line to center the button contents */
+}
+
+.containerlink {
+
+  display: flex;
+  justify-content: center;
+}
+
+.proj1links:hover {
+  background-color: #ffffff;
+  color: #000000;
+  transform: scale(1.1);
+  text-decoration: none;
+}
+
+#carouselProject1 {
+  padding-bottom: 2%;
 }
 
 
@@ -37,15 +39,19 @@
 .slide {
 
 
-  width: 60%;  /* Adjust to desired width */
-  margin: auto;  /* Centers the carousel */
+  width: 60%;
+  /* Adjust to desired width */
+  margin: auto;
+  /* Centers the carousel */
 }
 
 .carousel-item {
-    position: relative;
-    width: 100%;  /* Takes the full width of #carouselExample */
-    height: 0;
-    padding-top: 50%;  /* 1:2 aspect ratio */
+  position: relative;
+  width: 100%;
+  /* Takes the full width of #carouselExample */
+  height: 0;
+  padding-top: 50%;
+  /* 1:2 aspect ratio */
 }
 
 
@@ -54,179 +60,273 @@
 }
 
 .carousel-item img {
-    position: absolute;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/*img 1 and 2 */
+
+.dual-image {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: calc(100%);
+  margin-left: 100px;
+  margin-right: 100px;
+  justify-content: center;
+  gap: 20px;
+}
+
+.dual-image img {
+  width: 25%;
+}
+
+/*third image */
+
+
+.edescl {
+
+  height: auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+}
+
+
+#rot90 {
+  transform: rotate(90deg);
+
+
+}
+
+#edes2{
+  width: 40vw;
+  height: auto;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.image-container {
+  cursor: pointer;
+}
+
+  .fullscreen {
+    display: none;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: contain;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 202; 
+   /* Ensures it's above other content */
+}
+.fullscreen img {
+  max-width: 100%;
+  
+  max-height: 100%;
+}
+.no-scroll {
+  overflow: hidden; /* Prevent scrolling */
+}
+.blur-background {
+  filter: blur(10px);
+  background-color: rgba(255, 255, 255,1);
+  z-index: 2054654323;
+} 
+#bottomrep
+{
+  margin-bottom: 50px;
 }
 
-  /*img 1 and 2 */
-  
-  .dual-image {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: calc(100%);
-    margin-left: 100px;
-    margin-right: 100px;  
-    justify-content: center;
-    gap: 20px;
+/*project primary,sec NAV  */
+
+
+.project.hidden {
+  display: none;
+  /* Hide inactive projects */
 }
-  
-  .dual-image img{
-    width: 25%;
-  }
-  
-  /*third image */
-  
-  
-  .edescl{
-    
-    height: auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 10px;
-  }
-  
-  
-  #rot90 {
-    transform: rotate(90deg); 
-    
-  
-  }
-  
-  @media (max-width: 767px) {
 
-    .slide {
+.secondary-nav {
 
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 30px;
+}
 
-      width: 90%;  /* Adjust to desired width */
-      margin: auto;  /* Centers the carousel */
-    }
+.secondary-nav-button {
+  font-size: 25px;
+  background-color: rgba(20, 23, 28, 1);
 
+  color: #fff;
+  padding: 8px 16px;
+  text-decoration: none;
+  border-color: rgb(255, 255, 255);
+  border-style: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease-in-out;
+}
 
+.secondary-nav-button.active {
+  background-color: #ffffff;
+  color: #000000;
+  text-decoration: none;
+  outline: none;
 }
 
 
-  
-  
-  /*project primary,sec NAV  */
-  
-  
-  .project.hidden {
-    display: none; /* Hide inactive projects */
-  }
-  
-  .secondary-nav {
-  
-    display: flex;
-    justify-content: center;
-     gap: 10px; 
-    margin-top: 30px;
-  }
-  
-  .secondary-nav-button {
-    font-size: 25px;
-    background-color: rgba(20, 23, 28, 1);
-    
-    color: #fff;
-    padding: 8px 16px;
-    text-decoration: none;
-    border-color: rgb(255, 255, 255);
-    border-style:none;
-     border-radius: 5px; 
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  .secondary-nav-button.active {
-    background-color: #ffffff;
-    color: #000000;
-    text-decoration: none;
-    outline: none;
-  }
-  
-  
-  
-  .secondary-nav-button:hover {
-    background-color: #ffffff;
-    transform: scale(1.05); 
-    color: #000000;
-    outline: none;
-    
-    cursor:pointer;
-  }
-  
-  
-  
-  /*Arrow config  */
-  
-  
-    .arrow {
-      position: fixed;
-      top: 50%;
-      width: 50px;
-      height: 50px;
-      color: rgba(255, 255, 255, 0.5);
-      cursor: pointer;
-      transition: color 0.3s ease-in-out;
-    }
-    
-    .arrow:hover {
-      color: rgba(255, 255, 255, 0.8);
-    }
-    
-    .arrow-left {
-      left: 30px;
-    }
-    
-    .arrow-right {
-      right: 30px;
-    }
-  
-    .arrow i {
-      position: relative;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 2em;
-    }
-  
-    
-    project.hidden {
-      opacity: 0;
-      color: rgba(0, 0, 0, 0);
-      transition: opacity 0.3s ease-in-out;
-    }
-    
-    .project:not(.hidden) {
-      opacity: 1;
-      text-decoration: none;
-      /*color*/
-    }
+
+.secondary-nav-button:hover {
+  background-color: #ffffff;
+  transform: scale(1.05);
+  color: #000000;
+  outline: none;
+
+  cursor: pointer;
+}
+
+
+
+/*Arrow config  */
+
+
+.arrow {
+  position: fixed;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+}
+
+.arrow:hover {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.arrow-left {
+  left: 30px;
+}
+
+.arrow-right {
+  right: 30px;
+}
+
+.arrow i {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2em;
+}
+
+
+project.hidden {
+  opacity: 0;
+  color: rgba(0, 0, 0, 0);
+  transition: opacity 0.3s ease-in-out;
+}
 
 .project:not(.hidden) {
-padding-top: 2%;
+  opacity: 1;
+  text-decoration: none;
+  visibility: visible;
+  padding-top: 2%;
+  /*color*/
 }
 
 
-  
-  
-  /* project text */
+.project {
+  transition: opacity 0.1s ease-in-out, visibility 0.1s ease-in-out;
+  opacity: 0;
+  visibility: hidden;
+}
 
+
+
+/* project text */
+
+
+.projtext {
+  max-width: 90%;
+  /* or whatever max width you prefer */
+  margin-left: auto;
+  /* These two margin properties will center your container */
+  margin-right: auto;
+  padding: 0 60px;
+  /* Add padding to ensure text doesn't go under arrows */
+  /* rest of your styles */
+}
+
+h3 {
+
+  padding-top: 20px;
+}
+
+
+
+
+
+
+@media (max-width: 767px) {
+
+  #edes2 img{
+    width: 80vw;
+    height: auto;
+
+  }
+
+  .slide {
+
+
+    width: 90%;
+    /* Adjust to desired width */
+    margin: auto;
+    /* Centers the carousel */
+  }
 
   .projtext {
-    max-width: 90%; /* or whatever max width you prefer */
-    margin-left: auto;  /* These two margin properties will center your container */
+    max-width: 90%;
+    /* or whatever max width you prefer */
+    margin-left: auto;
+    /* These two margin properties will center your container */
     margin-right: auto;
-    padding: 0 60px; /* Add padding to ensure text doesn't go under arrows */
+    padding: 0 35px;
+    /* Add padding to ensure text doesn't go under arrows */
     /* rest of your styles */
+    font-size: 13px;
   }
 
-  h3 {
 
-    padding-top: 20px;
+
+  .arrow-left {
+    left: 5px;
   }
+
+  .arrow-right {
+    right: 5px;
+  }
+
+  .arrow i {
+    font-size: 1em;
+  }
+
+
+  .secondary-nav-button {
+    font-size: 15px;
+    padding: 8px 8px;
+    border-radius: 5px;
+  }
+
+
+
+}
