--- a/my webby - Copy/Ccontact.css
+++ b/my webby - Copy/Ccontact.css
@@ -1,18 +1,114 @@
+#contact-info {
+  display: flex;
+  flex-direction: column;
+  /*align-items: flex-start;*/
+}
+/*
+.contact-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px; 
+}*/
 
-#contactfoot {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-  
-  }
-
-.content {
-
-
-  text-align: center;
+.contact-item {
+  display: flex;
+  justify-content: space-between; /* Align text to the left and clipboard icon to the right */
+  align-items: center;
+  margin-bottom: 10px; /* space between contact items */
 }
 
-.content p{
-  text-align: center;
+.icon-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: black; Icon and text color
+}
+
+.contact-icon {
+  width: 24px; /* Icon size */
+  height: 24px; /* Icon size */
+  margin-right: 10px;
+  transition: filter 0.3s ease;
+}
+
+.copy-icon {
+  width: 20px; /* Clipboard icon size */
+  height: 20px; /* Clipboard icon size */
+  margin-left: 10px;
+  cursor: pointer;
+  transition: filter 0.3s ease;
+}
+
+.copy-icon-container {
+  margin-left: auto;
+}
+
+.contact-icon:hover, .copy-icon:hover {
+  filter: invert(100%);
+}
+
+/* Add any additional hover styles you want for the icons */
+.contact-icon:hover {
+  /* your hover styles here */
+}
+
+.copy-icon:hover {
+  /* your hover styles here */
+}
+/*
+
+.copied-message {
+  margin-left: 10px;
+  padding: 5px;
+  background-color: #f0f0f0;
+  color: #333;
+  border-radius: 5px;
+  font-size: 0.8em;
+  position: absolute; /* Position it relative to the parent 
+  top: 100%; /* Push down by full height of the parent 
+  left: 0;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  pointer-events: none; /* Allows clicks to pass through 
+  z-index: 1; /* Ensure it's above other items 
+}
+*/
+
+.copied-message {
+  display: none; /* Hide the message by default */
+  position: fixed; /* Fixed at the top */
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  /* background-color: #333; */
+  /* color: #fff; */
+  border-radius: 5px;
+  font-size: 0.8em;
+  z-index: 10;
+}
+
+/* Show the message */
+.contact-item:hover .copied-message {
+  opacity: 1;
+}
+
+.content{
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  padding-top: 109px;
+}
+
+.contact-icon{
+  display: block;
+  
+  justify-content: right;
+  align-items: right;
+}
+
+#phoneicon{
+  width: 24px;
+  height: 24px;
+  
 }
