--- a/my webby - Copy/Ccontact.css
+++ b/my webby - Copy/Ccontact.css
@@ -17,11 +17,15 @@
   margin-bottom: 10px; /* space between contact items */
 }
 
+.copy-icon{
+  color: white;
+}
+
 .icon-link {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: black; Icon and text color
+  color: rgb(204, 204, 204); Icon and text color
 }
 
 .contact-icon {
@@ -77,7 +81,7 @@
 .copied-message {
   display: none; /* Hide the message by default */
   position: fixed; /* Fixed at the top */
-  top: 0;
+  top: 10%;
   left: 50%;
   transform: translateX(-50%);
   padding: 10px;
