--- a/my webby - Copy/Cindex.css
+++ b/my webby - Copy/Cindex.css
@@ -14,6 +14,7 @@
   position: fixed;
   width: 100%;
   z-index: 1;
+  top: 62%;
 }
 
 
@@ -25,7 +26,7 @@
   overflow-x: hidden;
   overflow-y: hidden; 
   font-size: 18px;
-  background-image: url('resources/tester4.png'); /* Default background image */
+  background-image: url('resources/water.png'); /* Default background image */
   background-repeat: no-repeat;
   
   background-position: center center; /* Center the image */
@@ -40,25 +41,7 @@ html, body {
 }
 
 /* Media query for phones (screens smaller than 768px) */
-@media (max-width: 800px) {
-  #mainbody {
-    /* background-color: #a9b8ff; */
-    background-image: url('resources/tester2.png'); 
-    font-size: 22px;
-    align-items: center;
-    justify-content: center;
 
-  }
-  #particles-js {
-    display: none;
-}
-
-
-.indexfooter p {
-  color: #000000; /* Increase specificity */
-}
-
-}
 
 
 .logo {
@@ -69,14 +52,16 @@ html, body {
 
 
 .logo img {
-  width: 80px;
+  width: 40px;
+  
   height: auto;
   align-items: center;
 
 }
 
 #logomain {
-  width: 120px;
+  width: 100px;
+  
   height: auto;
   align-items: center;
 
@@ -89,7 +74,11 @@ html, body {
     padding: 20px;
     text-align: center;
     position: fixed;
+    justify-content: center;
+    align-items: center;
+    top: 70%;
     width: 100%;
+    z-index: 200;
     bottom: 0;
     
   }
@@ -112,19 +101,22 @@ html, body {
 
 
 
-  .homepage-content {
+   .homepage-content {
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
-  }
-  
+    z-index: 1000;
+  } 
+
+
+
   .home-button {
     background-color: rgba(20, 23, 28, 0.9);
     color: #fff;
-    padding: 15px 30px;
+    padding: 8px 16px;
     text-decoration: none;
     margin: 20px;
     display: inline-block;
@@ -136,4 +128,47 @@ html, body {
     background-color: #ffffff;
     transform: scale(1.1); /* Increase the size by 10% (adjust as needed) */
     color: #000000;
+  }
+
+
+
+
+
+  @media (max-width: 1000px) {
+    #mainfoot{
+  
+      top:50%;
+    }
+    #mainbody {
+      /* background-color: #a9b8ff; */
+      background-image: url('resources/tester2.png'); 
+      font-size: 22px;
+      align-items: center;
+      justify-content: center;
+  
+    }
+  
+    #homepage-nav {
+  
+      top: 50%;
+    }
+  
+    .homepage-content {
+      top: 50%;
+  
+    } 
+  
+    p {
+      color: black;
+    }
+  
+    #particles-js {
+      display: none;
+  }
+  
+  
+  .indexfooter p {
+    color: #000000; /* Increase specificity */
+  }
+  
   }
