--- a/my webby - Copy/Cproject.css
+++ b/my webby - Copy/Cproject.css
@@ -1,4 +1,30 @@
 /*projects start */
+@media (min-width: 967px) {
+
+  nav ul li a.active {
+    background-color: #ffffff;
+    color: black;
+    border-radius: 4px;
+    padding:7.5px 20px;
+    margin:none;
+    font-size: 14px;
+  
+    text-decoration: none;
+    /* Add any other styles you want for the active link */
+  }
+  
+  nav ul li a:hover {
+    background-color: #ffffff;
+    color: black;
+    border-radius: 4px;
+    padding:7.5px 20px;
+    margin:none;
+    font-size: 14px;
+  
+    text-decoration: none;
+    /* Add any other styles you want for the active link */
+  }
+}
 
 
 /*download buttons*/
