--- a/my webby - Copy/Cindex.css
+++ b/my webby - Copy/Cindex.css
@@ -1,9 +1,10 @@
-
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
-
+:root {
+  --WALLPAPER-color: #0a190e;
+  --font-color: #dfd0d0;
+}
 
 #homepage-nav {
   display: flex;
@@ -14,35 +15,29 @@
   position: fixed;
   width: 100%;
   z-index: 1;
-  top: 62%;
+  top: 2rem; /* 2rem under top for desktop */
 }
 
-
-
 #mainbody {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  overflow-y: hidden; 
+  overflow-y: hidden;
   font-size: 18px;
-  background-image: url('resources/water.png'); /* Default background image */
+  background-color: var(--WALLPAPER-color);
   background-repeat: no-repeat;
-  
-  background-position: center center; /* Center the image */
-  background-size: 100vw 100vh; /* viewport width and height */
-  background-attachment: fixed; 
+  background-position: center center;
+  background-size: 100vw 100vh;
+  background-attachment: fixed;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
 }
-
-/* Media query for phones (screens smaller than 768px) */
-
-
 
 .logo {
   display: flex;
@@ -50,125 +45,152 @@ html, body {
   align-items: center;
 }
 
-
 .logo img {
   width: 40px;
-  
   height: auto;
   align-items: center;
-
 }
 
 #logomain {
   width: 100px;
-  
   height: auto;
   align-items: center;
-
 }
 
-
-
 #mainfoot {
-    background-color: rgba(255, 255, 255, 0);
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    justify-content: center;
-    align-items: center;
-    top: 70%;
-    width: 100%;
-    z-index: 200;
-    bottom: 0;
-    
-  }
+  background-color: rgba(255, 255, 255, 0);
+  text-align: center;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  bottom: 20px;
+  width: 100%;
+  z-index: 200;
+  color: var(--font-color);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1em;
+}
+
+.homepage-content {
+  color: var(--font-color);
+  text-align: center;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  z-index: 1000;
   
-  #mainfoot{
-    color: #ffffff;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1em;
-  
+}
+.homepage-content {
+  margin-top: 2rem; /* Positioning under the navigation bar */
+}
+.H1class {
+  font-family: 'Times New Roman', Times, serif;
+  margin-bottom: 0px;
+  margin-top: 5px;
+}
+
+.home-button {
+  background-color: rgb(118, 76, 21);
+  color: var(--font-color);
+  padding: 8px 16px;
+  text-decoration: none;
+  margin: 0.5rem;
+  display: inline-block;
+  border-radius: 1.3rem;
+  transition: all 0.1s ease-in-out;
+}
+
+.home-button:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.H2class {
+  font-family: 'Times New Roman', Times, serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: var(--font-color);
+}
+
+#animated-text {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: .15em solid lightblue;
+  width: 0;
+  animation: typing 1.4s steps(200, end) forwards, blink-caret .75s step-end 3;
+  animation-fill-mode: forwards;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 39ch }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: lightblue }
+}
+
+@media (max-width: 800px) {
+  #homepage-nav {
+    top: 0; /* Adjust position for mobile */
+    padding: 10px;
+    flex-direction: column;
   }
-  
-
-  .homepage-content {
-    color: #fff;
-  }
-
-  #mainfoot {
-    font-size: 16px;
-  }
-
-
-
-   .homepage-content {
-    text-align: center;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    z-index: 1000;
-  } 
-
-
 
   .home-button {
-    background-color: rgba(20, 23, 28, 0.9);
-    color: #fff;
-    padding: 8px 16px;
-    text-decoration: none;
-    margin: 20px;
-    display: inline-block;
-    border-radius: 5px;
-    transition: all 0.1s ease-in-out;
-  }
-  
-  .home-button:hover {
-    background-color: #ffffff;
-    transform: scale(1.1); /* Increase the size by 10% (adjust as needed) */
-    color: #000000;
+    margin-top: 0.5rem;
+    /*lin grad for background color*/
+    background: linear-gradient(90deg, #868686aa 0%, #ffffff00 100%);
   }
 
-
-
-
-
-  @media (max-width: 1000px) {
-    #mainfoot{
-  
-      top:50%;
-    }
-    #mainbody {
-      /* background-color: #a9b8ff; */
-      background-image: url('resources/tester2.png'); 
-      font-size: 22px;
-      align-items: center;
-      justify-content: center;
-  
-    }
-  
-    #homepage-nav {
-  
-      top: 50%;
-    }
-  
-    .homepage-content {
-      top: 50%;
-  
-    } 
-  
-    p {
-      color: black;
-    }
-  
-    #particles-js {
-      display: none;
+  .homepage-content {
+    
+    width: max-content;
+    top: 30%;
+    left: 30%;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
   }
-  
-  
+
+  .home-button {
+    padding-left: 1.5rem;
+    padding-right: 10rem;
+    border-radius: 0px;
+  }
+
+  .H2class {
+    height: auto;
+    padding-top: 5rem;
+  }
+
+  #animated-text {
+    font-size: 1rem;
+    margin-top: 55%;
+  }
+
+  .indexfooter {
+    bottom: 2rem;
+  }
+
+  p {
+    color: var(--font-color);
+  }
+
+  #particles-js {
+    display: none;
+  }
+  .indexfooter h1{
+    font-size: 2rem;
+  }
   .indexfooter p {
-    color: #000000; /* Increase specificity */
+    color: var(--font-color);
   }
-  
-  }
+}
